<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="325sp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom" />

<!--    1st LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="NestedWeights,TextContrastCheck" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button

            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
<!--    2nd LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button

            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
<!--    3rd LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button

            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Minus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
<!--    4th LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/Dot"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#38ACEC"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/Clr"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

        <Button

            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
<!--    5th LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:onClick="onEqual"
            android:text="@string/Equal"
            android:textColor="@color/white"
            android:textSize="35dp"
            app:backgroundTint="#E64CAF50"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>